# stock-income-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_ingestion_tables.py  0002_analysis_tables.py  0003_portfolio_tables.py  0004_learning_tables.py
backend/app/: config.py  db.py  main.py
backend/app/analysis/: alerts.py  learning.py  options_scoring.py  portfolio.py  screener.py
backend/app/api/: feedback.py  health.py  lessons.py  pipeline.py  portfolio.py  recommendations.py  settings.py  stocks.py  trades.py
backend/app/llm/: anthropic_client.py  base.py  prompts.py  schemas.py
backend/app/market/: price_cache.py
backend/app/models/: __init__.py  fundamentals.py  learning.py  news.py  options.py  pipeline.py  portfolio.py  recommendation.py  safety.py  screening.py  stocks.py
backend/app/notify/: email.py
backend/app/pipeline/: __main__.py  cli.py  repo.py  runner.py  scheduler.py
backend/app/sources/: base.py  fakes.py  fundamentals_yfinance.py  wikipedia_source.py  yahoo_rss_source.py  (+1 more)
backend/tests/: conftest.py  test_anthropic_integration.py  test_config.py  test_db.py  test_health.py  test_learning_api.py  test_llm_wiring.py  test_migration_analysis.py  test_migration_ingestion.py  test_migration_learning.py  test_migration_portfolio.py  test_models_import.py  test_pipeline_api.py  test_portfolio_api.py  test_recommendations_api.py  test_stocks_api.py  test_trades_api.py  test_yfinance_integration.py
(+130 files in other folders)
